--- a/pdf-configs/style.css
+++ b/pdf-configs/style.css
@@ -12,6 +12,10 @@ h1:first-child {
   border-bottom: solid 3px black;
 }
 
+h3{
+  border-bottom: solid 1px black;
+}
+
 table {
   font-size: 11px;
   border-collapse: collapse;
