--- a/pdf-configs/style.css
+++ b/pdf-configs/style.css
@@ -13,7 +13,10 @@ h1:first-child {
 }
 
 h3{
-  border-bottom: solid 1px black;
+    padding: 0.25em 0.5em;/*上下 左右の余白*/
+    color: #494949;/*文字色*/
+    background: transparent;/*背景透明に*/
+    border-left: solid 5px #7db4e6;/*左線*/
 }
 
 table {
